# role-asdf

./: .travis.yml  README.md  pyproject.toml
.cookiecutter/: cookiecutter.json
.github/markdown/: ISSUE_TEMPLATE.md
.github/scripts/: setup.sh
.github/workflows/: push.yml  release.yml
defaults/: main.yml
meta/: main.yml
molecule/already_present/: converge.yml  verify.yml
molecule/common/tasks/: setup.yml  verify_asdf.yml  verify_binary.yml  verify_plugin.yml  verify_pre_install.yml
molecule/docker1/: converge.yml
molecule/erlang/: converge.yml  verify.yml
molecule/kubectl/: converge.yml  verify.yml
molecule/kubectl/vars/: main.yml
molecule/no_plugins/: verify.yml
molecule/nodejs/: converge.yml  verify.yml
molecule/nodejs/vars/: main.yml
molecule/python/: verify.yml
molecule/python/vars/: main.yml
molecule/ruby/: verify.yml
molecule/ruby/vars/: main.yml
tasks/: install.yml  main.yml
tasks/plugins_darwin/: install.yml  main.yml
tasks/plugins_darwin/plugin_tasks/: nodejs.yml
tests/: test.yml
