[tool.poetry]
name = "role-asdf"
version = "0.2.2"
description = "Installs the ASDF version manager on OSX machines."
authors = ["Niall Byrne <niall@niallbyrne.ca>"]

[tool.poetry.dependencies]
python = ">=3.6.1,<4.0"
ansible = "^4.1.0"

[tool.poetry.dev-dependencies]
ansible-compat = "!=1.0.0" # https://github.com/ansible-community/ansible-compat/issues/114
ansible-lint = "^5.0.8"
commitizen = "^2.17.6"
molecule = {extras = ["docker"], version = "^3.3.0"}
yamllint = "^1.26.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
